[tool.poetry]
name = "nonebot-plugin-randomBugcatPic"
version = "0.0.1"
description = "Get Random Gif of Bugcat in Nonebot2"
authors = ["6lszxz <ediamonds@126.com>"]
documentation = "https://github.com/6lszxz/nonebot-plugin-randomBugcatPic/blob/main/README.md"
license = "MIT"
homepage = "https://github.com/6lszxz/nonebot-plugin-randomBugcatPic"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "gif", "Bugcat"]

[tool.poetry.dependencies]
python = ">=3.7.3,<4.0"
httpx = ">=0.0.0"
nonebot2 = ">=2.0.0a14"
nonebot-adapter-onebot = ">=2.0.0b1"
nonebot-plugin-apscheduler = ">=0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"